fix: tooltip visibility, add: no tokens message in Chart

--- a/src/components/common/Chart/Chart.module.scss
+++ b/src/components/common/Chart/Chart.module.scss
@@ -3,9 +3,11 @@
   gap: 80px;
   height: 100%;
   overflow: hidden;
+  color: #ebecff;
 
   .donut {
     position: relative;
+    z-index: 1;
     width: 200px;
     height: 200px;
     margin-left: 10px;
@@ -13,6 +15,7 @@
 
     .networkInfo {
       position: absolute;
+      z-index: -1;
       left: 50%;
       top: 40%;
       transform: translate(-50%, -50%);
@@ -44,60 +47,85 @@
   .legend {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
     
     .legendTitle {
       font-size: 25px;
       font-weight: 400;
-      color: #ebecff;
       margin: 0;
       margin-bottom: 23px;
     }
 
     .legendItems {
       width: 100%;
-      height: 100%;
       max-height: 190px;
       display: flex;
       flex-direction: column;
       padding-right: 15px;
       overflow-y: auto;
       scrollbar-width: thin;
-  
+
       .item {
         display: flex;
         align-items: center;
         gap: 12px;
         padding: 7px 5px;
         border-radius: 8px;
+        border-bottom: 1px solid transparent;
+
+        &:last-child {
+          border-bottom: none;
+        }
   
         &.active {
-            background-color: #282B44;
-            border: 1px solid #3E436BCC;
+          background-color: #282B44;
+          border: 1px solid #3E436BCC;
         }
   
         .separator {
-            flex: 1 0 auto;
+          flex: 1 0 auto;
         }
   
         .color {
-            flex: 0 0 auto;
-            height: 20px;
-            width: 20px;
-            border-radius: 8px;
+          flex: 0 0 auto;
+          height: 20px;
+          width: 20px;
+          border-radius: 8px;
         }
   
         label {
-            flex: 0 0 auto;
-            font-size: 14px;
-            color: #ebecff;
+          flex: 0 0 auto;
+          font-size: 14px;
+          color: #ebecff;
         }
   
         .percent {
-            flex: 0 0 auto;
-            font-size: 14px;
-            color: #ebecff;
+          flex: 0 0 auto;
+          font-size: 14px;
+          color: #ebecff;
         }
       }
     } 
+    .noTokensWrapper {
+      display: flex;
+      flex: 1;
+      align-items: center;
+      .noTokens {
+        display: flex;
+        gap: 10px;
+        max-width: 250px;
+  
+        label {
+          flex: 1;
+        }
+  
+        svg {
+          margin-top: 5px;
+        }
+      }
+
+    }
   }
 }
